[package]
name = "distribuida"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
ine5429-primes = {git = "https://github.com/dcroque/ine5429-primes.git", branch = "mainless" }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
thiserror = "1.0.50"
num-bigint = "0.4.4"
axum = {git = "https://github.com/tokio-rs/axum.git", branch = "main"}
tokio = { version = "1.0", features = ["full"] }
